@@ -4,6 +4,13 @@ critical bugfixes in releases from a bugfix branch. For a detailed changelog
 of changes in the main development branch, consult the version control
 history.
 
+Current development version (branch VERSION_0_4_FIXES)
+======================================================
+
+* Fix bug in set_free_handicap that made the player engine not know about the
+  placed handicap stones
+
+
 Version 0.4 - 2009 May 22
 =========================
 
